--- a/Pages/Gerenciamento.html
+++ b/Pages/Gerenciamento.html
@@ -171,7 +171,9 @@
           agendamento.servico,
           agendamento.data,
           agendamento.horario,
-          agendamento.detalhes
+          agendamento.detalhes,
+          agendamento.responsavel,
+          agendamento.telefone
         );
         containerCardsPendents.appendChild(newCard);
       }
@@ -197,13 +199,22 @@
           agendamento.servico,
           agendamento.data,
           agendamento.horario,
-          agendamento.detalhes
+          agendamento.detalhes,
+          agendamento.responsavel,
+          agendamento.telefone
         );
         containerCardsFinalizado.appendChild(newCard);
       }
     }
 
-    function createAgendamentoCard(NomeDoServico, data, horario, detalhes) {
+    function createAgendamentoCard(
+      NomeDoServico,
+      data,
+      horario,
+      detalhes,
+      responsavel,
+      telefone
+    ) {
       let newDate = new Date(data);
       let dataFormatada =
         newDate.getDate() +
@@ -252,12 +263,22 @@
                         </button>
                       </div>
                     </div>
-                    <div>
+                    <div class="d-flex justify-content-between">
                       <div class="d-flex flex-column">
                         <label style="font-size: 0.7rem; color: #00000080"
                           >Detalhes do Carro</label
                         >
                         <p>${detalhes ? detalhes : "N/A"}</p>
+                      </div>
+                      <div class="d-flex flex-column">
+                        <label style="font-size: 0.7rem; color: #00000080"
+                          >Responsável</label>
+                        <p>${responsavel}</p>
+                      </div>
+                      <div class="d-flex flex-column">
+                        <label style="font-size: 0.7rem; color: #00000080"
+                          >Telefone</label>
+                        <p>${telefone}</p>
                       </div>
                     </div>
                   `;
@@ -265,7 +286,14 @@
       return newCard;
     }
 
-    function createCardFinalizado(NomeDoServico, data, horario, detalhes) {
+    function createCardFinalizado(
+      NomeDoServico,
+      data,
+      horario,
+      detalhes,
+      responsavel,
+      telefone
+    ) {
       let newDate = new Date(data);
       let dataFormatada =
         newDate.getDate() +
@@ -311,6 +339,18 @@
                     >Detalhes do Carro</label
                   >
                   <p>${detalhes ? detalhes : "N/A"}</p>
+                </div>
+                <div class="d-flex flex-column">
+                  <label style="font-size: 0.7rem; color: #00000080"
+                    >Responsável</label
+                  >
+                  <p>${responsavel}</p>
+                </div>
+                <div class="d-flex flex-column">
+                  <label style="font-size: 0.7rem; color: #00000080"
+                    >Telefone</label
+                  >
+                  <p>${telefone}</p>
                 </div>
               </div>
             `;
