--- a/Pages/Agendamento.html
+++ b/Pages/Agendamento.html
@@ -201,13 +201,16 @@
                   required
                 />
                 <br />
-                <label for="">Telefone</label>
+                <label for="">Telefonee</label>
                 <input
-                  type="number"
+                  type="tel"
                   class="form-control"
-                  id="telefone"
-                  required
-                  placeholder="(19) 99999-9999"
+                  id="phone"
+                  name="phone"
+                  placeholder="(99) 9999-9999"
+                  pattern="(\([0-9]{2}\))\s([9]{1})?([0-9]{4})-([0-9]{4})"
+                  title="Número de telefone precisa ser no formato (99) 9999-9999"
+                  required="required"
                 />
                 <br />
               </div>
