--- a/Pages/Agendamento.html
+++ b/Pages/Agendamento.html
@@ -205,7 +205,7 @@
                 <input
                   type="tel"
                   class="form-control"
-                  id="phone"
+                  id="telefone"
                   name="phone"
                   placeholder="(99) 9999-9999"
                   pattern="(\([0-9]{2}\))\s([9]{1})?([0-9]{4})-([0-9]{4})"
