--- a/Pages/Agendamento.html
+++ b/Pages/Agendamento.html
@@ -206,7 +206,6 @@
                   type="tel"
                   class="form-control"
                   id="telefone"
-                  name="phone"
                   placeholder="(99) 9999-9999"
                   pattern="(\([0-9]{2}\))\s([9]{1})?([0-9]{4})-([0-9]{4})"
                   title="Número de telefone precisa ser no formato (99) 9999-9999"
@@ -222,7 +221,7 @@
             <div class="card" id="Form2">
               <h5 class="card-header" id="header-servico"></h5>
               <div class="card-body">
-                <label for="detalhes-carro" class="form-label"
+                <label for="detalhes-carro" class="'form-label"
                   >Detalhes adicionais do carro</label
                 >
                 <textarea
