--- a/Pages/Agendamento.html
+++ b/Pages/Agendamento.html
@@ -1,269 +1,226 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <link href="../Style/styleAgendamento.css" rel="stylesheet" />
-    <title>Agendamento</title>
-  </head>
 
-  <script>
-    const tipoServico = localStorage.getItem("Servico");
-    const precoServico = localStorage.getItem("PrecoServico");
-    window.data = "";
-    window.hora = "";
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+  <link href="../Style/styleAgendamento.css" rel="stylesheet" />
+  <title>Agendamento</title>
+</head>
 
-    window.onload = function () {
-      let isAdmin = localStorage.getItem("Auth") === "gestor";
-      let isUser = localStorage.getItem("Auth") === "user";
+<script>
+  const tipoServico = localStorage.getItem("Servico");
+  const precoServico = localStorage.getItem("PrecoServico");
+  window.data = "";
+  window.hora = "";
 
-      if (isAdmin) {
-        let navOptions = document.getElementById("nav-options");
-        let newOption = document.createElement("li");
-        newOption.innerHTML = `<a href="Gerenciamento.html">Gerenciamento</a>`;
-        navOptions.appendChild(newOption);
-      }
+  window.onload = function () {
+    let isAdmin = localStorage.getItem("Auth") === "gestor";
+    let isUser = localStorage.getItem("Auth") === "user";
 
-      if (isAdmin || isUser) {
-        let logoutHref = document.getElementById("logout");
-        let logoutIcon = document.createElement("div");
-        logoutIcon.classList.add("mdi", "mdi-logout");
+    if (isAdmin) {
+      let navOptions = document.getElementById("nav-options");
+      let newOption = document.createElement("li");
+      newOption.innerHTML = `<a href="Gerenciamento.html">Gerenciamento</a>`;
+      navOptions.appendChild(newOption);
+    }
 
-        logoutIcon.onclick = logout;
-        logoutHref.appendChild(logoutIcon);
-      }
+    if (isAdmin || isUser) {
+      let logoutHref = document.getElementById("logout");
+      let logoutIcon = document.createElement("div");
+      logoutIcon.classList.add("mdi", "mdi-logout");
 
-      if (!localStorage["Auth"]) {
-        document.location.href = "./Login.html";
+      logoutIcon.onclick = logout;
+      logoutHref.appendChild(logoutIcon);
+    }
+
+    if (!localStorage["Auth"]) {
+      document.location.href = "./Login.html";
+      return;
+    }
+
+    document.getElementById("header-servico").textContent = tipoServico;
+    document.getElementById("valor-servico").value = precoServico;
+    document
+      .getElementById("data")
+      .setAttribute("min", new Date().toISOString().split("T")[0]);
+  };
+
+  function logout() {
+    localStorage.removeItem("Auth");
+    window.location.href = "Login.html";
+  }
+
+  function Agendar(nomeServico) {
+    let agendamentosStr = "agendamentos";
+    let dataReservadasStr = "DatasReservadas";
+
+    // Pegando dados
+    let data = document.getElementById("data").value;
+    let horario = document.getElementById("time").value;
+    let detalhes = document.getElementById("detalhes-carro").value;
+    let responsavel = document.getElementById("responsavel").value;
+    let telefone = document.getElementById("telefone").value;
+
+    //Validar Data
+    let datasReservadas = JSON.parse(localStorage.getItem(dataReservadasStr));
+    if (datasReservadas) {
+      let existeData = !!datasReservadas.find(
+        (dataReservada) => dataReservada === data
+      );
+      if (existeData) {
+        alert("JA EXISTE RESERVA");
         return;
       }
+    }
+    if (!(!!data && !!horario && !!responsavel & !!telefone)) {
+      alert("PREENCHA TODOS OS CAMPOS OBRIGATORIOS");
+      return;
+    }
 
-      document.getElementById("header-servico").textContent = tipoServico;
-      document.getElementById("valor-servico").value = precoServico;
-      document
-        .getElementById("data")
-        .setAttribute("min", new Date().toISOString().split("T")[0]);
+    let dados = {
+      servico: tipoServico,
+      data: data,
+      horario: horario,
+      preco: precoServico,
+      detalhes: detalhes,
+      responsavel: responsavel,
+      telefone: telefone,
     };
 
-    function logout() {
-      localStorage.removeItem("Auth");
-      window.location.href = "Login.html";
+    // Armazenando no Local Storage
+    let agendamentos = JSON.parse(localStorage.getItem(agendamentosStr));
+
+    if (agendamentos) {
+      agendamentos.push(dados);
+      localStorage.setItem(agendamentosStr, JSON.stringify(agendamentos));
+    } else {
+      localStorage.setItem(agendamentosStr, JSON.stringify([dados]));
     }
 
-    function Agendar(nomeServico) {
-      let agendamentosStr = "agendamentos";
-      let dataReservadasStr = "DatasReservadas";
+    // Reservar Data
+    if (datasReservadas) {
+      datasReservadas.push(data);
 
-      // Pegando dados
-      let data = document.getElementById("data").value;
-      let horario = document.getElementById("time").value;
-      let detalhes = document.getElementById("detalhes-carro").value;
-      let responsavel = document.getElementById("responsavel").value;
-      let telefone = document.getElementById("telefone").value;
-
-      //Validar Data
-      let datasReservadas = JSON.parse(localStorage.getItem(dataReservadasStr));
-      if (datasReservadas) {
-        let existeData = !!datasReservadas.find(
-          (dataReservada) => dataReservada === data
-        );
-        if (existeData) {
-          alert("JA EXISTE RESERVA");
-          return;
-        }
-      }
-      if (!(!!data && !!horario && !!responsavel & !!telefone)) {
-        alert("PREENCHA TODOS OS CAMPOS OBRIGATORIOS");
-        return;
-      }
-
-      let dados = {
-        servico: tipoServico,
-        data: data,
-        horario: horario,
-        preco: precoServico,
-        detalhes: detalhes,
-        responsavel: responsavel,
-        telefone: telefone,
-      };
-
-      // Armazenando no Local Storage
-      let agendamentos = JSON.parse(localStorage.getItem(agendamentosStr));
-
-      if (agendamentos) {
-        agendamentos.push(dados);
-        localStorage.setItem(agendamentosStr, JSON.stringify(agendamentos));
-      } else {
-        localStorage.setItem(agendamentosStr, JSON.stringify([dados]));
-      }
-
-      // Reservar Data
-      if (datasReservadas) {
-        datasReservadas.push(data);
-
-        localStorage.setItem(
-          dataReservadasStr,
-          JSON.stringify(datasReservadas)
-        );
-      } else {
-        localStorage.setItem(dataReservadasStr, JSON.stringify([data]));
-      }
-
-      alert("Serviço Agendado");
-      window.location.href = "./Servico.html";
+      localStorage.setItem(
+        dataReservadasStr,
+        JSON.stringify(datasReservadas)
+      );
+    } else {
+      localStorage.setItem(dataReservadasStr, JSON.stringify([data]));
     }
 
-    // if (tipoServico && window.data && window.hora) {
-    //   // Use && em vez de &
-    //   const mensagemPreSelecionada = `Olá, eu quero agendar meu serviço:\n*Tipo de serviço:* ${tipoServico}\n*Data marcada:* ${window.data}\n*Horário marcado:* ${window.hora}`
+    alert("Serviço Agendado");
+    window.location.href = "./Servico.html";
+  }
 
-    //   // Substitua o número de telefone abaixo pelo número correto
-    //   const numeroTelefone = "557999506852"
+  // if (tipoServico && window.data && window.hora) {
+  //   // Use && em vez de &
+  //   const mensagemPreSelecionada = `Olá, eu quero agendar meu serviço:\n*Tipo de serviço:* ${tipoServico}\n*Data marcada:* ${window.data}\n*Horário marcado:* ${window.hora}`
 
-    //   const mensagemCodificada = encodeURIComponent(mensagemPreSelecionada)
+  //   // Substitua o número de telefone abaixo pelo número correto
+  //   const numeroTelefone = "557999506852"
 
-    //   const linkWhatsApp = `https://api.whatsapp.com/send?phone=${numeroTelefone}&text="${mensagemCodificada}"`
-    //   var w1 = window.open(linkWhatsApp, '_blank').focus();
-    // } else {
-    //   console.log("Dados necessários não estão definidos no localStorage.")
-    // }
-  </script>
+  //   const mensagemCodificada = encodeURIComponent(mensagemPreSelecionada)
 
-  <body class="body">
-    <nav class="navbar">
-      <a href="Index.html">
-        <img class="logo" src="../Assets/logo1.png" />
+  //   const linkWhatsApp = `https://api.whatsapp.com/send?phone=${numeroTelefone}&text="${mensagemCodificada}"`
+  //   var w1 = window.open(linkWhatsApp, '_blank').focus();
+  // } else {
+  //   console.log("Dados necessários não estão definidos no localStorage.")
+  // }
+</script>
+
+<body class="body">
+  <nav class="navbar">
+    <a href="Index.html">
+      <img class="logo" src="../Assets/logo1.png" />
+    </a>
+
+    <div class="nav-options-container">
+      <ul id="nav-options" class="navbar-options">
+        <li><a href="Index.html">Home</a></li>
+        <li><a href="Servico.html">Serviços</a></li>
+        <li><a href="#faleconosco">Fale Conosco</a></li>
+      </ul>
+      <a href="Login.html">
+        <i style="font-size: 1.3rem" class="mdi mdi-account"></i>
       </a>
-
-      <div class="nav-options-container">
-        <ul id="nav-options" class="navbar-options">
-          <li><a href="Index.html">Home</a></li>
-          <li><a href="Servico.html">Serviços</a></li>
-          <li><a href="#faleconosco">Fale Conosco</a></li>
-        </ul>
-        <a href="Login.html">
-          <i style="font-size: 1.3rem" class="mdi mdi-account"></i>
-        </a>
-        <a id="logout" href="Login.html"> </a>
-      </div>
-    </nav>
-    <br />
-    <br />
-    <h2 style="text-align: center; color: white">Agende seu Serviço</h2>
-    <div class="container overflow-hidden">
-      <div class="row gx-5">
-        <div class="col">
-          <div class="p-3">
-            <form class="row g-3 needs-validation" id="Form">
-              <div class="col-md-6" id="label">
-                <label for="nome" class="form-label">Data</label>
-                <input
-                  type="date"
-                  class="form-control"
-                  name="data"
-                  id="data"
-                  min=""
-                  required
-                />
-                <br />
-                <label class="form-label">Horas</label>
-                <select class="form-select" id="time" required>
-                  <option value="">Selecione um horário</option>
-                  <option value="8:00">8:00</option>
-                  <option value="8:30">8:30</option>
-                  <option value="9:00">9:00</option>
-                  <option value="9:30">9:30</option>
-                  <option value="10:00">10:00</option>
-                  <option value="10:30">10:30</option>
-                  <option value="11:00">11:00</option>
-                  <option value="13:00">13:00</option>
-                  <option value="13:30">13:30</option>
-                  <option value="14:00">14:00</option>
-                  <option value="14:30">14:30</option>
-                  <option value="15:00">15:00</option>
-                  <option value="15:30">15:30</option>
-                  <option value="16:00">16:00</option>
-                  <option value="16:30">16:30</option>
-                </select>
-                <br />
-                <label for="">Responsavel do Carro</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="responsavel"
-                  placeholder="Digite o nome do responsavel"
-                  required
-                />
-                <br />
-                <label for="">Telefonee</label>
-                <input
-                  type="tel"
-                  class="form-control"
-                  id="telefone"
-                  placeholder="(99) 9999-9999"
-                  pattern="(\([0-9]{2}\))\s([9]{1})?([0-9]{4})-([0-9]{4})"
-                  title="Número de telefone precisa ser no formato (99) 9999-9999"
-                  required="required"
-                />
-                <br />
-              </div>
-            </form>
-          </div>
+      <a id="logout" href="Login.html"> </a>
+    </div>
+  </nav>
+  <br />
+  <br />
+  <h2 style="text-align: center; color: white">Agende seu Serviço</h2>
+  <div class="container overflow-hidden">
+    <div class="row gx-5">
+      <div class="col">
+        <div class="p-3">
+          <form class="row g-3 needs-validation" id="Form">
+            <div class="col-md-6" id="label">
+              <label for="nome" class="form-label">Data</label>
+              <input type="date" class="form-control" name="data" id="data" min="" required />
+              <br />
+              <label class="form-label">Horas</label>
+              <select class="form-select" id="time" required>
+                <option value="">Selecione um horário</option>
+                <option value="8:00">8:00</option>
+                <option value="8:30">8:30</option>
+                <option value="9:00">9:00</option>
+                <option value="9:30">9:30</option>
+                <option value="10:00">10:00</option>
+                <option value="10:30">10:30</option>
+                <option value="11:00">11:00</option>
+                <option value="13:00">13:00</option>
+                <option value="13:30">13:30</option>
+                <option value="14:00">14:00</option>
+                <option value="14:30">14:30</option>
+                <option value="15:00">15:00</option>
+                <option value="15:30">15:30</option>
+                <option value="16:00">16:00</option>
+                <option value="16:30">16:30</option>
+              </select>
+              <br />
+              <label for="">Responsavel do Carro</label>
+              <input type="text" class="form-control" id="responsavel" placeholder="Digite o nome do responsavel"
+                required />
+              <br />
+              <label for="">Telefone</label>
+              <input type="tel" class="form-control" id="telefone" placeholder="(99) 9999-9999"
+                pattern="(\([0-9]{2}\))\s([9]{1})?([0-9]{4})-([0-9]{4})"
+                title="Número de telefone precisa ser no formato (99) 9999-9999" required="required" />
+              <br />
+            </div>
+          </form>
         </div>
-        <div class="col">
-          <div class="p-3">
-            <div class="card" id="Form2">
-              <h5 class="card-header" id="header-servico"></h5>
-              <div class="card-body">
-                <label for="detalhes-carro" class="'form-label"
-                  >Detalhes adicionais do carro</label
-                >
-                <textarea
-                  class="form-control mb-3"
-                  id="detalhes-carro"
-                  rows="3"
-                  placeholder="Descreva detalhes específicos sobre o carro"
-                ></textarea>
+      </div>
+      <div class="col">
+        <div class="p-3">
+          <div class="card" id="Form2">
+            <h5 class="card-header" id="header-servico"></h5>
+            <div class="card-body">
+              <label for="detalhes-carro" class="'form-label">Detalhes adicionais do carro</label>
+              <textarea class="form-control mb-3" id="detalhes-carro" rows="3" placeholder="Opcional"></textarea>
 
-                <label for="valor-servico" class="form-label"
-                  >Valor do serviço</label
-                >
-                <div class="input-group mb-3">
-                  <span class="input-group-text" id="valor-prefixo">R$</span>
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="100"
-                    id="valor-servico"
-                    disabled
-                  />
-                </div>
-
-                <a
-                  target="_blank"
-                  class="btn btn-primary"
-                  id="btn3"
-                  onclick="Agendar()"
-                  >Agendar</a
-                >
+              <label for="valor-servico" class="form-label">Valor do serviço</label>
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="valor-prefixo">R$</span>
+                <input type="text" class="form-control" placeholder="100" id="valor-servico" disabled />
               </div>
+
+              <a target="_blank" class="btn btn-primary" id="btn3" onclick="Agendar()">Agendar</a>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
-    <script src="../utils/logout.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <script src="../utils/logout.js"></script>
+</body>
+
 </html>
